name:                layout-engine
version:             0.1.0.0
synopsis:            Layout engine
description:         Please see README.md
homepage:            http://github.com/ajnsit/layout-engine#readme
license:             BSD3
license-file:        LICENSE
author:              Anupam Jain
maintainer:          ajnsit@gmail.com
copyright:           Copyright (C) 2016. Anupam Jain. All Rights Reserved.
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types, Sample, Layout
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable layout-engine-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , layout-engine
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ajnsit/layout-engine
